# lwlog

./: .clang-tidy  .gitignore  CMakeLists.txt  Config.cmake.in  GenerateProjects.bat  LICENSE  README.md  lwlog.sln  premake5.lua  sonar-project.properties
.github/ci/: configure_github_actions.cmake  ctest_build.cmake  ctest_configure.cmake  (+1 more)
Sandbox/: Benchmark.h  Sandbox.cpp  Sandbox.vcxproj  Sandbox.vcxproj.filters
all/: CMakeLists.txt
cmake/: lwlog-config.cmake.in  options.h.in
examples/: Benchmark.h  CMakeLists.txt  Sandbox.cpp
lwlog/: CMakeLists.txt  Colors.txt  Format.txt  level.h  logger.h  logger_impl.h  lwlog.cpp  lwlog.h  lwlog.vcxproj  lwlog.vcxproj.filters  registry.cpp  registry.h
lwlog/details/: datetime.h  file_writer.cpp  log_message.h  source_meta.h
lwlog/details/pattern/: alignment_formatter.cpp  datetime_formatters.h  format_data.h  logger_formatters.h  pattern.cpp  pattern.h
lwlog/include/: buffer_limits.h  configuration.h  level.h  logger.h  logger_impl.h  lwlog.h
lwlog/include/details/: adaptive_waiter.h  bounded_queue.h  bounded_queue_impl.h  memory_buffer.h  memory_buffer_impl.h  record.h  source_meta.h  source_meta_impl.h  stream_writer_impl.h  windows_lightweight.h
lwlog/include/details/argument_formatter/: argument_buffers_pool.h  argument_buffers_pool_impl.h  argument_format.h  argument_format_impl.h
lwlog/include/details/os/: datetime_utility.h  datetime_utility_impl.h  os.h  os_impl.h  time_point.h  time_point_impl.h
lwlog/include/details/pattern/: alignment_formatter_impl.h  attribute.cpp  color_format_data.h  flag_data.h  formatter.h  formatter_impl.h  formatters.h  pattern.h  pattern_impl.h
lwlog/include/policy/: concurrency_policy.h  flush_policy.h  log_policy.h  log_policy_impl.h  threading_policy.h
lwlog/include/sinks/: file_sink.h  sink.h  sink_factory.h  sink_impl.h  sink_interface.h  stderr_sink.h  stdout_sink.h
lwlog/lwlog/: color.h  core.h  datetime.h  detail.h  details.h  dispatcher.cpp  dispatcher.h  formatter.cpp  formatter.h  fwd.h  level.h  log_level.h  logger.cpp  logger.h  logger_impl.h  logger_interface.h  logger_interface_base.h  logger_registry_interface.h  lwlog.cpp  lwlog.h  primitives.h  print.h  registry.cpp  registry.h  utilities.h
lwlog/lwlog/details/: backtracer.cpp  backtracer.h  color.h  conjugate_memory_buffer.cpp  conjugate_memory_buffer.h  datetime.h  duplex.h  file_helper.cpp  file_helper.h  file_writer.cpp  file_writer.h  formatter.cpp  formatter.h  formatter_data.h  formatter_primitives.h  log_message.cpp  log_message.h  print.h  singleton.h  stream.h  stream_writer.h  utilities.h
lwlog/lwlog/details/formatter/: formatter.cpp  formatter.h  formatter_data.h  formatter_primitives.h
lwlog/lwlog/details/pattern/: datetime_formatters.h  format_data.h  logger_formatters.h  pattern.cpp  pattern.h
lwlog/lwlog/details/pattern_compiler/: datetime_formatters.h  flag_data.h  logger_formatters.h  pattern_compiler.cpp  pattern_compiler.h
lwlog/lwlog/interface/: backtracer_interface.h  level_filter_interface.h  level_interface.h  level_visibility_interface.h  log_level_interface.h  logger_interface.h  pattern_interface.h  sink_buffer_interface.h  sink_interface.h
lwlog/lwlog/policy/: log_policy.cpp  log_policy.h  sink_color_policy.h  sink_storage_policy.h  threading_policy.h
lwlog/lwlog/sinks/: console_sink.cpp  console_sink.h  file_impl.h  file_sink.cpp  file_sink.h  rotating_file_sink.cpp  rotating_file_sink.h  sink.cpp  sink.h  sink_factory.cpp  sink_factory.h  sink_impl.h  sink_level.h  stderr_color_sink.h  stderr_sink.h  stdout_color_sink.h  stdout_sink.h
lwlog/policy/: log_policy.cpp  log_policy.h
lwlog/sinks/: file_sink.h  sink.h  sink_factory.h  sink_impl.h  stderr_sink.h  stdout_sink.h
lwlog/src/: buffer_limits.h  buffer_sizes.h  configuration.h  fwd.h  level.h  level.hpp  logger.h  logger.hpp  logger_impl.h  logger_impl.hpp  lwlog.cpp  lwlog.h  lwlog.hpp  lwlog_impl.h  lwlog_impl.hpp  primitives.h  registry.cpp  registry.h  registry.hpp  tweakme.h
lwlog/src/details/: argument_format.h  argument_format.hpp  argument_format_impl.h  bounded_queue.h  bounded_queue_impl.h  color.h  console_writer.h  datetime.cpp  datetime.h  datetime.hpp  file_writer.cpp  file_writer.h  file_writer.hpp  log_message.h  log_message.hpp  memory_buffer.h  memory_buffer_impl.h  os.h  os.hpp  record.h  record.hpp  record_impl.h  source_meta.h  source_meta_impl.h  stream_writer.h  stream_writer_impl.h  topic.h  topic_registry.cpp  topic_registry.h  topic_registry_impl.h  tweakme_macros.h  tweakme_macros.hpp  windows_lightweight.h
lwlog/src/details/argument_formatter/: argument_buffers_pool.h  argument_buffers_pool_impl.h  argument_format.h  argument_format_impl.h
lwlog/src/details/os/: datetime.cpp  datetime.h  datetime_impl.h  datetime_utility.h  datetime_utility_impl.h  os.h  os_impl.h  time_point.h  time_point_impl.h
lwlog/src/details/pattern/: alignment_formatter.cpp  alignment_formatter.h  alignment_formatter.hpp  alignment_formatter_impl.h  attribute.cpp  attribute.h  attribute.hpp  color_compiler.cpp  color_compiler.h  color_format_data.h  datetime_formatters.h  flag_data.h  format_data.h  formatter.h  formatter.hpp  formatter_impl.h  formatters.h  logger_formatters.h  pattern.cpp  pattern.h  pattern_impl.h
lwlog/src/interface/: logger_interface.h  logger_interface.hpp  logger_interface_impl.h  sink_interface.h
lwlog/src/policy/: concurrency_policy.h  flush_policy.h  log_policy.cpp  log_policy.h  log_policy.hpp  log_policy_impl.h  overflow_policy.h  sink_color_policy.h  sink_storage_policy.h  sink_storage_policy.hpp  sink_storage_policy_impl.h  threading_policy.h  topic_policy.h  topic_policy_impl.h
lwlog/src/sinks/: file_sink.h  file_sink.hpp  sink.h  sink.hpp  sink_factory.h  sink_impl.h  sink_impl.hpp  sink_interface.h  stderr_sink.h  stderr_sink.hpp  stdout_sink.h  stdout_sink.hpp
lwlogUnitTest/: UnitTest.cpp  UnitTest.h  lwlogUnitTest.vcxproj  lwlogUnitTest.vcxproj.filters
sandbox/: CMakeLists.txt  benchmark.h
source/: lwlog.cpp  registry.cpp
src/: level.h  lwlog.h
(+99 files in other folders)
